force-app/main/default/objects/Invoices__c/Invoices__c.object-meta.xml
<CustomObject>
    <label>Invoice</label>
    <nameField>
        <label>Invoices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>