force-app/main/default/objects/Invoices__c/fields/Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Amount_Outstanding__c</fullName>
    <formula>IF( Invoice_Refunded__c = FALSE, Invoice_Total__c - Amounts_Paid__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>