force-app/main/default/objects/Invoices__c/fields/Amount_Owing__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owing__c</fullName>
    <label>Amount Owing</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>