force-app/main/default/objects/Invoices__c/fields/Amounts_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amounts_Paid__c</fullName>
    <label>Amounts Paid</label>
    <summarizedField>Payments__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Payments__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>