force-app/main/default/objects/Invoices__c/fields/CF_Doctor_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>CF_Doctor_Provider_Number__c</fullName>
    <description>Created purely to reference in SA Invoice SOQL Code (wouldn&apos;t accept string value)</description>
    <formula>Patients_Donors__r.Account.Doctor2__r.Provider_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CF Doctor Provider Number</label>
    <type>Text</type>
</CustomField>