force-app/main/default/objects/Invoices__c/fields/Date_Paid_In_Full__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid_In_Full__c</fullName>
    <label>Date Paid In Full</label>
    <summarizedField>Payments__c.Payment_Date__c</summarizedField>
    <summaryForeignKey>Payments__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>