force-app/main/default/objects/Invoices__c/fields/Health_Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Health_Fund_Name__c</fullName>
    <formula>Patients_Donors__r.Private_Health_Fund_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Fund Name</label>
    <type>Text</type>
</CustomField>