force-app/main/default/objects/Invoices__c/fields/Invoice_Available_for_Next_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Available_for_Next_Cycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Available for Next Cycle</label>
    <type>Checkbox</type>
</CustomField>