force-app/main/default/objects/Invoices__c/fields/Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Notes__c</fullName>
    <label>Invoice Notes</label>
    <type>TextArea</type>
</CustomField>