force-app/main/default/objects/Invoices__c/fields/Invoice_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Refunded</label>
    <type>Checkbox</type>
</CustomField>