force-app/main/default/objects/Invoices__c/fields/Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total__c</fullName>
    <label>Invoice Total</label>
    <summarizedField>Cycle_Invoice_Items__c.Amount__c</summarizedField>
    <summaryForeignKey>Cycle_Invoice_Items__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>