force-app/main/default/objects/Invoices__c/fields/Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Number__c</fullName>
    <formula>IF(  Related_Cycle__c  = &quot;&quot;,  Patients_Donors__r.Account.Doctor2__r.Provider_Number__c,  Related_Cycle__r.Doctor_Initiating_Cycle__r.Provider_Number__c )</formula>
    <label>Provider Number</label>
    <type>Text</type>
</CustomField>