force-app/main/default/objects/Invoices__c/fields/Related_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Related_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>