force-app/main/default/objects/Invoices__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <formula>IF(   Related_Cycle__c  = &quot;&quot;,   Patients_Donors__r.Account.Doctor2__r.Name ,  Related_Cycle__r.Doctor_Initiating_Cycle__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider</label>
    <type>Text</type>
</CustomField>