force-app/main/default/objects/Invoices__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_Outstanding__c</columns>
    <columns>Amounts_Paid__c</columns>
    <columns>Related_Cycle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount_Owing__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>