force-app/main/default/objects/Invoices__c/listViews/allSelection_Invoices.listView-meta.xml
<ListView>
    <fullName>allSelection_Invoices</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>