force-app/main/default/objects/Invoices__c/listViews/Due_This_Week.listView-meta.xml
<ListView>
    <fullName>Due_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Due_Date__c</columns>
    <columns>Amount_Outstanding__c</columns>
    <columns>Amounts_Paid__c</columns>
    <columns>Related_Cycle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Amount_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Due This Week</label>
    <sharedTo>
        <group>Patient_Services</group>
    </sharedTo>
</ListView>