force-app/main/default/objects/Invoices__c/listViews/Invoices_Awaiting_Payment.listView-meta.xml
<ListView>
    <fullName>Invoices_Awaiting_Payment</fullName>
    <columns>NAME</columns>
    <columns>Amount_Outstanding__c</columns>
    <columns>Amounts_Paid__c</columns>
    <columns>Related_Cycle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount_Outstanding__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Invoices Awaiting Payment</label>
</ListView>